<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/loadding_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_loadmore" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/loadding_faild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_loadmore_faild" />
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/loadding_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_loadMore_empty" />
    </LinearLayout>
</LinearLayout>